--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "ejs": "^3.1.10",
+    "ejs-lint": "^2.0.0",
     "express": "^4.19.2",
     "fast-xml-parser": "^4.3.2",
     "form-data": "^4.0.0",
